--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         /* ===== FUNDO PERSONALIZÁVEL ===== */
         /* <!-- COLOQUE A URL DA SUA IMAGEM DE FUNDO AQUI --> */
         body {
-            background-image: url('https://cdn.pixabay.com/photo/2016/03/15/02/42/floor-1256804_1280.jpg');
+            background-image: url('https://drive.google.com/file/d/18-vNXvjazLMlqAJTuBBxFEHMcQMh8We5/view?usp=drive_link');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
@@ -1151,3 +1151,4 @@
     </script>
 </body>
 </html>
+
