--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
 
         // Cole sua configuração do Firebase aqui
         const firebaseConfig = {
-            apiKey: "AIzaSyAQV471lKDavWBXNp8N5vFQzjv9dVAnkOI",
-            authDomain: "levitlon-c129b.firebaseapp.com",
-            projectId: "levitlon-c129b",
-            storageBucket: "levitlon-c129b.appspot.com",
-            messagingSenderId: "270962617295",
-            appId: "1:270962617295:web:6e1c7f047ab9534be1c0ba",
-            measurementId: "G-HXB5XCCH5D"
+              apiKey: "AIzaSyDkkttXj--SF0dvwSuY-D63V03h4qvkWqE",
+              authDomain: "levitlon.firebaseapp.com",
+              projectId: "levitlon",
+              storageBucket: "levitlon.firebasestorage.app",
+              messagingSenderId: "860077752001",
+              appId: "1:860077752001:web:a40472ddd150b244aa1e40",
+              measurementId: "G-6DYFDEGJKV"
         };
         
         const app = initializeApp(firebaseConfig);
@@ -1151,4 +1151,5 @@
     </script>
 </body>
 </html>
+
 
