--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         /* ===== FUNDO PERSONALIZÁVEL ===== */
         /* <!-- COLOQUE A URL DA SUA IMAGEM DE FUNDO AQUI --> */
         body {
-            background-image: url('https://drive.google.com/file/d/18-vNXvjazLMlqAJTuBBxFEHMcQMh8We5/view?usp=drive_link');
+            background-image: url('https://i.imgur.com/dfXWncN.png');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
@@ -1151,5 +1151,6 @@
     </script>
 </body>
 </html>
+
 
 
